force-app/main/default/objects/Fee__c/fields/Formula__c.field-meta.xml
<CustomField>
    <fullName>Formula__c</fullName>
    <inlineHelpText>L Represent loan amount like example : (L * (L+(20/100))</inlineHelpText>
    <label>Formula</label>
    <length>255</length>
    <type>Text</type>
</CustomField>