force-app/main/default/objects/Fee__c/fields/Minimum__c.field-meta.xml
<CustomField>
    <fullName>Minimum__c</fullName>
    <label>Minimum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>