force-app/main/default/objects/Fee__c/fields/Percentage__c.field-meta.xml
<CustomField>
    <fullName>Percentage__c</fullName>
    <label>Percentage</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>