force-app/main/default/objects/Fee__c/recordTypes/Fixed.recordType-meta.xml
<RecordType>
    <fullName>Fixed</fullName>
    <active>true</active>
    <label>Fixed</label>
</RecordType>