force-app/main/default/objects/Fee__c/recordTypes/Variable.recordType-meta.xml
<RecordType>
    <fullName>Variable</fullName>
    <active>true</active>
    <label>Variable</label>
</RecordType>