force-app/main/default/objects/Fee__c/validationRules/Enter_atleast_one_field.validationRule-meta.xml
<ValidationRule>
    <fullName>Enter_atleast_one_field</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.Name ==&apos;Variable&apos;,
ISBLANK( Formula__c),
ISBLANK( Default_Amount__c) ,
ISBLANK(Percentage__c)
)</errorConditionFormula>
    <errorMessage>Please enter one value of default amount or percentage or formula</errorMessage>
</ValidationRule>