force-app/main/default/objects/Fee__c/validationRules/If_Enter_three_values.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Enter_three_values</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 RecordType.Name == &apos;Variable&apos;,

OR(

AND(
NOT(ISBLANK( Formula__c)),
NOT(ISBLANK(  Percentage__c ))),

AND(
NOT(ISBLANK( Formula__c)),
NOT(ISBLANK(  Default_Amount__c ))),

AND(
NOT(ISBLANK( Percentage__c )),
NOT(ISBLANK(  Default_Amount__c )))
)
)</errorConditionFormula>
    <errorMessage>You can enter only any one value of formula or percentage or default amount</errorMessage>
</ValidationRule>