force-app/main/default/objects/Fee__c/validationRules/If_Maximum_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Maximum_empty</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.Name == &apos;Variable&apos;,
NOT(ISBLANK(Default_Amount__c)),
ISBLANK(Maximum__c)
)</errorConditionFormula>
    <errorDisplayField>Maximum__c</errorDisplayField>
    <errorMessage>Please enter maximum value</errorMessage>
</ValidationRule>