force-app/main/default/objects/Fee__c/validationRules/If_Maximum_exceeds.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Maximum_exceeds</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
RecordType.Name == &apos;Variable&apos;,
NOT(ISBLANK(Default_Amount__c)),
Default_Amount__c &gt; Maximum__c

)</errorConditionFormula>
    <errorDisplayField>Default_Amount__c</errorDisplayField>
    <errorMessage>Default amount should be less than maximum</errorMessage>
</ValidationRule>