force-app/main/default/objects/Fee__c/validationRules/If_Minimum_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Minimum_empty</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.Name == &apos;Variable&apos;,
NOT(ISBLANK(Default_Amount__c)),
ISBLANK(Minimum__c)
)</errorConditionFormula>
    <errorDisplayField>Minimum__c</errorDisplayField>
    <errorMessage>Please enter minimum value</errorMessage>
</ValidationRule>