force-app/main/default/objects/Fee__c/validationRules/IF_Minimum_empty_Fixed.validationRule-meta.xml
<ValidationRule>
    <fullName>IF_Minimum_empty_Fixed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.Name == &apos;Fixed&apos;,
NOT(ISBLANK(Amount__c)),
ISBLANK(Minimum__c)
)</errorConditionFormula>
    <errorDisplayField>Minimum__c</errorDisplayField>
    <errorMessage>Please enter minimum value</errorMessage>
</ValidationRule>