force-app/main/default/objects/Fee__c/validationRules/If_Minimum_exceeds.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Minimum_exceeds</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
RecordType.Name == &apos;Variable&apos;,
NOT(ISBLANK(Default_Amount__c)),
Default_Amount__c &lt; Minimum__c
)</errorConditionFormula>
    <errorDisplayField>Default_Amount__c</errorDisplayField>
    <errorMessage>Default amount should be greater than minimum</errorMessage>
</ValidationRule>