force-app/main/default/objects/Fee__c/validationRules/If_Minimum_exceeds_Fixed.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Minimum_exceeds_Fixed</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
RecordType.Name == &apos;Fixed&apos;,
NOT(ISBLANK(Amount__c)),
Amount__c &gt;  Minimum__c 

)</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>Amount should be less than or equal to  Minimum</errorMessage>
</ValidationRule>