force-app/main/default/objects/Fee__c/validationRules/If_Minimum_greater_than_Maximum.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Minimum_greater_than_Maximum</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.Name == &apos;Variable&apos;,
NOT(ISBLANK(Default_Amount__c)),
Maximum__c &lt; Minimum__c
)</errorConditionFormula>
    <errorMessage>Maximum should be greater than minimum</errorMessage>
</ValidationRule>